# gnomesh

./: .kdbgrc.gnomesh  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  gnomesh  gnomesh.dsp  gnomesh.dsw  gnomesh.glade.bak  gnomesh.gladep.bak  gnomesh.kdevprj  gnomesh.kdevses  gnomesh.ncb  gnomesh.opt  gnomesh.plg
Debug/: gnomesh.ilk  gnomesh.pch  vc60.idb
autom4te-2.53.cache/: output.0  traces.0
autom4te.cache/: output.0  traces.0
gnomesh-api/: ____acconfig_h.html  ____config_h.html  all-globals.html  circle.html  file_data.html  full-list-circle.html  full-list-file_data.html  full-list-line.html  full-list-linkline.html  full-list-linkpoint.html  full-list-point.html  full-list-text.html  header-list.html  hier.html  index-long.html  index.html  line.html  linkline.html  linkpoint.html  point.html  src___base__structures_h.html  src___callbacks_h.html  src___export__bathymetry__elcom_h.html  src___file__plot_h.html  src___interface_h.html  text.html  (+6 more)
src/: Makefile  Makefile.am  Makefile.in  base_structures.h  callbacks.c  callbacks.h  export_bathymetry_elcom.c  export_bathymetry_elcom.h  file_plot.c  file_plot.h  gtk_routines.c  gtk_routines.h  interface.c  interface.c.bak  interface.h  leer_archivo.c  leer_archivo.h  main.c  main.h  object_admin.c  object_admin.h  support.c  vec2ras.c  vec2ras.h  xpm_manager.c  xpm_manager.h
src/.deps/: callbacks.Po  export_bathymetry_elcom.Po  file_plot.Po  gtk_routines.Po  interface.Po  leer_archivo.Po  main.Po  object_admin.Po  support.Po  vec2ras.Po  xpm_manager.Po
(+2 files in other folders)
